fix bug #48640: cleaned up ifdef whoes, removed duplicate code.